Trying my best to deserialization work using serde libs

--- a/tests/sample.ini
+++ b/tests/sample.ini
@@ -1,20 +1,7 @@
 
 [server]
-port=8080
+port=8088
 
-; This is a comment 
-# This is another comment
-[section]
-key = value
-
-; test multiline
 [database]
-host = localhost
-password = asdfghjkl\
- qwertyuiop\
-user = user123\
- abcdefg\
-
-; test inline comment
-[app]
-name=MyApp # this is the app name
+user=user123
+password=asdfghjkl
